--- a/dashboard/static/css/dashboard_style.css
+++ b/dashboard/static/css/dashboard_style.css
@@ -33,6 +33,10 @@
     padding-top: 3px;
 }
 
+#update-stock-prices div label.active{
+    background-color: rgb(0, 144, 158);
+}
+
 /* Glaros Colour Palette */
 .gla-primary {
     background-color: rgb(0, 144, 158)
