--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -33,7 +33,7 @@
             <div class="col-xl-6 col-lg-6 rounded-circle">
                 <div id="left-card" class="card shadow mb-4">
                     <!-- Card Header -->
-                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
+                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                         <h6 class="m-0 text-dark">General Information</h6>
                     </div>
                     <!-- Card Body -->
@@ -85,11 +85,44 @@
             <div class="col-xl-6 col-lg-6">
                 <div id="right-card" class="card shadow mb-4">
                     <!-- Card Header -->
-                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-center">
+                    <div class="card-header py-2 d-flex flex-row align-items-center justify-content-between">
                         <h6 class="m-0 text-dark">Stock Prices</h6>
-                        <button id="update-stock-prices-btn" class="ml-5" onclick="update_stock_prices()"
-                                data-ajaxurl="{% url 'ajax_update_stock_prices' %}">Update
-                        </button>
+                        <div id="update-stock-prices" class="btn-toolbar m-0" role="toolbar"
+                             data-ajaxurl="{% url 'ajax_update_stock_prices' %}"
+                             aria-label="Toolbar with button groups">
+
+                            <!-- Chart Options -->
+                            <div class="btn-group btn-group-toggle shadow-sm" data-toggle="buttons" role="group"
+                                 aria-label="Data points group">
+                                <label class="btn gla-secondary text-gla-light active">
+                                    <input type="radio" name="datapoints" data-points="10" onclick="update_chart()"
+                                           autocomplete="off" checked> 10
+                                </label>
+                                <label class="btn gla-secondary text-gla-light">
+                                    <input type="radio" name="datapoints" data-points="20" onclick="update_chart()"
+                                           autocomplete="off"> 20
+                                </label>
+                                <label class="btn gla-secondary text-gla-light">
+                                    <input type="radio" name="datapoints" data-points="30" onclick="update_chart()"
+                                           autocomplete="off"> 30
+                                </label>
+                            </div>
+                            <div class="btn-group btn-group-toggle ml-2" data-toggle="buttons" role="group"
+                                 aria-label="Time intervals group">
+                                <label class="btn gla-secondary text-gla-light active">
+                                    <input type="radio" name="intervals" data-interval="1d" onclick="update_chart()"
+                                           autocomplete="off" checked> Day
+                                </label>
+                                <label class="btn gla-secondary text-gla-light">
+                                    <input type="radio" name="intervals" data-interval="1wk" onclick="update_chart()"
+                                           autocomplete="off"> Week
+                                </label>
+                                <label class="btn gla-secondary text-gla-light">
+                                    <input type="radio" name="intervals" data-interval="1mo" onclick="update_chart()"
+                                           autocomplete="off"> Month
+                                </label>
+                            </div>
+                        </div>
                     </div>
                     <!-- Card Body -->
                     <div class="card-body">
@@ -116,6 +149,7 @@
     {% block main_body %}{% endblock %}
 </main>
 <!-- Chart imports -->
+<script type="text/javascript" src="{% static 'js/moment.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/loader.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 <!-- JQuery & Bootstrap -->
