--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -86,8 +86,8 @@
                 <div id="right-card" class="card shadow mb-4">
                     <!-- Card Header -->
                     <div class="card-header py-2 d-flex flex-row align-items-center justify-content-between">
-                        <h6 class="m-0 text-dark">Stock Prices</h6>
-                        <div id="update-stock-prices" class="btn-toolbar m-0" role="toolbar"
+                        <h6 class="m-0 text-dark" style="width: min-content">Stock Prices</h6>
+                        <div id="update-stock-prices" class="btn-toolbar m-0 " role="toolbar"
                              data-ajaxurl="{% url 'ajax_update_stock_prices' %}"
                              aria-label="Toolbar with button groups">
 
@@ -140,8 +140,8 @@
             </div>
             <!-- Card Body -->
             <div class="card-body">
-                <div class="chart-area">
-                    <div id="timeline" style="height: 180px;"></div>
+                <div class="chart-area w-100">
+                    <div id="timeline" data-update-url="{% url 'ajax_update_migration_timeline' %}" style="height: 180px;"></div>
                 </div>
             </div>
         </div>
