--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -10,7 +10,7 @@
     {% block head_imports %}{% endblock %}
 </head>
 <body>
-<main class="gla-light">
+<main class="gla-light pb-5">
     <nav class="navbar navbar-dark gla-secondary">
         <div class="container">
             <a class="navbar-brand font1" href="#"><img src="{% static 'img/glaros_logo.svg' %}"></a>
@@ -137,7 +137,8 @@
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 text-dark">Migration Timeline</h6>
-                <div class="tooltip">
+                <!-- Modal Button -->
+                <div class="tooltip" data-toggle="modal" data-target=".bd-example-modal-lg">
                     <img id="show-migrations-table" src="{% static 'img/expand-arrows-alt-solid.svg' %}" role="button">
                     <span class="tooltiptext">Tooltip text</span>
                 </div>
@@ -151,12 +152,24 @@
             </div>
         </div>
     </div>
+    <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+         aria-labelledby="myLargeModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content p-2 shadow">
+                <h2 class="m-4 text-center">Migrations History</h2>
+                <div id="migrations-table" data-ajaxurl="{% url 'ajax_update_migration_table' %}" class="mt-0 mb-0"></div>
+            </div>
+        </div>
+    </div>
     {% block main_body %}{% endblock %}
 </main>
 <!-- Chart imports -->
 <script type="text/javascript" src="{% static 'js/moment.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/loader.js' %}"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<!-- Tabulator import -->
+<link href="{% static 'css/tabulator_semantic-ui.min.css' %}" rel="stylesheet">
+<script type="text/javascript" src="{% static 'js/tabulator.min.js' %}"></script>
 <!-- JQuery & Bootstrap -->
 <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
