Driver updates the General Information file
- a method update_general_info() updates the json file with the info of
  the current VM. (Closes #100)
- Also added colour and formal name to each CSP Class (Closes #101)
- Included a simple population script to add dummy data to the database

--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -47,7 +47,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="font-weight-light font-italic text-info mb-1">Currently on:</div>
-                                    <div class="h5 mb-0 font-weight-bold text-uppercase text-gla-aws">{{ currently_on }}</div>
+                                    <div class="h5 mb-0 font-weight-bold text-uppercase" style="color: {{ currently_on_colour }}">{{ currently_on }}</div>
                                 </div>
                             </div>
                         </div>
