Fixed two JS imports (Charts.js & Tabulator.js)
- tabulator.min.js is now in static
- Charts.min.js is now served localy rather than via a CDN

--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -166,7 +166,7 @@
 <!-- Chart imports -->
 <script type="text/javascript" src="{% static 'js/moment.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/loader.js' %}"></script>
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
+<script src="{% static 'js/Chart.min.js' %}"></script>
 <!-- Tabulator import -->
 <link href="{% static 'css/tabulator_semantic-ui.min.css' %}" rel="stylesheet">
 <script type="text/javascript" src="{% static 'js/tabulator.min.js' %}"></script>
