--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -43,11 +43,11 @@
                             <div class="row no-gutters align-items-center mb-4">
                                 <div class="col-6">
                                     <div class="font-weight-light font-italic text-info mb-1">Status:</div>
-                                    <div class="h5 mb-0 font-weight-bold text-gla-success">{{ current_status }}</div>
+                                    <div id="current_status" class="h5 mb-0 font-weight-bold text-gla-success">{{ current_status }}</div>
                                 </div>
                                 <div class="col-6">
                                     <div class="font-weight-light font-italic text-info mb-1">Currently on:</div>
-                                    <div class="h5 mb-0 font-weight-bold text-uppercase" style="color: {{ currently_on_colour }}">{{ currently_on }}</div>
+                                    <div id="currently_on" class="h5 mb-0 font-weight-bold text-uppercase" style="color: {{ currently_on_colour }}">{{ currently_on }}</div>
                                 </div>
                             </div>
                         </div>
@@ -60,17 +60,17 @@
                                 <div class="col-6">
                                     <div class="mb-4">
                                         <div class="font-weight-light font-italic text-info mb-1">Last Migration:</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gla-secondary">{{ last_migration }}</div>
+                                        <div id="last_migration" class="h5 mb-0 font-weight-bold text-gla-secondary">{{ last_migration }}</div>
                                     </div>
                                     <div>
                                         <div class="font-weight-light font-italic text-info mb-1">Current Date:</div>
-                                        <div class="h5 mb-0 font-weight-bold text-gla-secondary">{{ current_date }}</div>
+                                        <div id="current_date" class="h5 mb-0 font-weight-bold text-gla-secondary">{{ current_date }}</div>
                                     </div>
                                 </div>
 
                                 <div class="col-6">
                                     <div class="font-weight-light font-italic text-info mb-1">Current IP:</div>
-                                    <div class="h5 mb-0 font-weight-bold text-uppercase text-gla-secondary">
+                                    <div id="current_ip" class="h5 mb-0 font-weight-bold text-uppercase text-gla-secondary">
                                         {{ current_ip }}
                                     </div>
                                 </div>
