[Feature] Glaros now has a logo!
- logo added to static files as a png and is presented onto the
  dashboard in place of the old (placeholder) logo.

--- a/dashboard/templates/dashboard_app/dashboard_base.html
+++ b/dashboard/templates/dashboard_app/dashboard_base.html
@@ -13,7 +13,7 @@
 <main class="gla-light pb-5">
     <nav class="navbar navbar-dark gla-secondary">
         <div class="container">
-            <a class="navbar-brand font1" href="{% url 'index' %}"><img src="{% static 'img/glaros_logo.svg' %}"></a>
+            <a class="navbar-brand font1" href="{% url 'index' %}"><img src="{% static 'img/Glaros Logo text.png' %}"></a>
         </div>
     </nav>
     <div class="container mb-4">
