--- a/dashboard/static/css/dashboard_style.css
+++ b/dashboard/static/css/dashboard_style.css
@@ -3,7 +3,19 @@
 }
 
 .navbar-brand img {
-    height: 35px;
+    height: 25px;
+}
+
+#logout_btn {
+    border-radius: 17px;
+    border-color: rgb(238, 238, 238);
+    color: rgb(238, 238, 238);
+}
+
+#logout_btn:hover {
+    border-color: rgb(0, 144, 158);
+    background-color: rgb(0, 144, 158);
+
 }
 
 #show-migrations-table {
